# SynSNPs

./: main.py  pyproject.toml
